--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "GPT"
   ],
   "scripts": {
+    "start" : "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
